--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,4 @@
 OPENWEATHERMAP_API_KEY=<YOUR_API_KEY>
 COINMARKETCAP_API_KEY=<YOUR_API_KEY>
 EXCHANGERATE_API_KEY=<YOUR_API_KEY>
+GOLD_API_KEY=<YOUR_API_KEY>
